# OpenE2E-CodebergMirror

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
doc/: OLM.md  OLM.ru.md  README.ru.md
locales/en-US/: cli.ftl  messages.ftl
locales/ru-RU/: cli.ftl  messages.ftl
src/: error_mapper.rs  main.rs
src/backend/: mod.rs  orchestrator.rs
src/backend/managers/: mod.rs  session_manager.rs  storage_manager.rs  user.rs  user_manager.rs
src/backend/objects/: message.rs  mod.rs  session.rs  user.rs
src/frontend/: cli.rs  commands.rs  localization.rs  logger.rs  mod.rs
