[package]
name = "OpenE2E"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0"
description = "A chat-like end-to-end encrypted messaging prototype"
readme = "README.md"
repository = "https://codeberg.org/bazelik-dev/OpenE2E"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
colorize = "0.1.0"
log = "0.4.33"
serde_json = "1.0.150"
sha2 = "0.11.0"
vodozemac = "0.10.0"
