[package]
name = "OpenE2E"
version = "0.0.4"
edition = "2024"
license = "LGPL-3.0"
description = "A work in progress lightweight GUI client written in Rust for secure end-to-end encrypted communication through open, untrusted channels (government messengers, email, etc.)."
readme = "README.md"
repository = "https://codeberg.org/bazelik-dev/OpenE2E"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
colorize = "0.1.0"
log = "0.4.33"
rocksdb = "0.24.0"
serde_json = "1.0.150"
sha2 = "0.11.0"
vodozemac = "0.10.0"
