[package]
name = "OpenE2E"
version = "0.7.0"
edition = "2024"
license = "GPL-3.0"
description = "A work in progress lightweight GUI client written in Rust for secure end-to-end encrypted communication through open, untrusted channels (government messengers, email, etc.)."
readme = "README.md"
repository = "https://codeberg.org/bazelik-dev/OpenE2E"

[dependencies]
aes-gcm = "0.11.0"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.45"
cipher = "0.5.2"
colorize = "0.1.0"
fjall = "3.1.8"
fluent = "0.17.0"
log = "0.4.33"
rand = "0.10.2"
serde = "1.0.229"
serde_json = "1.0.150"
sha2 = "0.11.0"
unic-langid = "0.9.6"
vodozemac = "0.10.0"
